// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Plus (PlusRequest) returns (PlusReply) {}
  rpc SayHelloAfterDelay (HelloRequest) returns (HelloReply) {}
  rpc BotPayloadCheck(BotRequest) returns (BotResponse){}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message PlusRequest {
  int64 a = 1;
  int64 b = 2;
}

message PlusReply {
  int64 result = 1;
}

message BotRequest{
    int64 appid = 1;
    string host = 2;
    int32 sdkflag = 3;
    string ip = 4;
    bytes url = 5;
    bytes cookie = 6;
    bytes getform = 7;
    bytes postform = 8;
    bytes postsdkform = 9;
    bytes sign = 10;
}

message BotResponse{
    int32 ret = 1;
    string name = 2;
    string session = 3;
    int32 ts = 4;
    string token = 5;
}
